fixed bug where resizing window with an open collapsed header would cause sizing problems on uncollapsed header links

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,6 +5,7 @@
 @media screen and (max-width: map-get($bp, header)) {
     [data-menu-links] {
         height: auto;
+        min-height: 0;
         max-height: 0;
 
         & > * {
